--- a/app/globals.css
+++ b/app/globals.css
@@ -4,11 +4,29 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url('/bgbg.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+}
+
+/* Desktop background */
+@media (min-width: 768px) {
+  body {
+    background-image: url('/bgbg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+}
+
+/* Mobile background - without fixed attachment */
+@media (max-width: 767px) {
+  body {
+    background-image: url('/bgbg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    min-height: 100vh;
+  }
 }
 
 @layer base {
